Fix bottom margin visible with form-horizontal

--- a/src/app/component-wrapper/src/app/iq-select2/iq-select2.component.css
+++ b/src/app/component-wrapper/src/app/iq-select2/iq-select2.component.css
@@ -87,6 +87,7 @@
 
 .select2-container ul {
     position: relative;
+    margin-bottom: 0;
 }
 
 .simple-selection.search-focused .selectedItemText {
